# spring-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml
.github/workflows/: clippy.yaml  docs.yaml  miri.yaml  publish.yaml  test-coverage.yaml
docs/: config.toml
docs/content/docs/getting-started/: component.md  component.zh.md  quick-start.md
docs/content/docs/plugins/: summer-opendal.md  summer-opendal.zh.md  summer-pubsub.md  summer-pubsub.zh.md  summer-sa-token.md  summer-sa-token.zh.md
examples/data/multi-datasource-example/: Cargo.toml
examples/data/multi-datasource-example/src/: main.rs  multi_datasource.rs
examples/data/postgres-example/: Cargo.toml
examples/data/postgres-example/src/: main.rs
examples/data/redis-example/: Cargo.toml
examples/data/redis-example/src/: main.rs
examples/data/sea-orm-example/: Cargo.toml
examples/data/sea-orm-example/src/: main.rs
examples/di/circular-dependency-injection-example/: Cargo.toml  README.md
examples/di/circular-dependency-injection-example/config/: app.toml
examples/di/circular-dependency-injection-example/src/: main.rs
examples/di/component-macro-example/: Cargo.toml
examples/di/component-macro-example/src/: main.rs
examples/di/dependency-inject-example/: Cargo.toml
examples/di/dependency-inject-example/config/: app.toml
examples/di/dependency-inject-example/src/: main.rs
examples/di/nested-dependency-injection-example/: Cargo.toml
examples/di/nested-dependency-injection-example/src/: main.rs
examples/getting-started/hello-world-example/: Cargo.toml
examples/getting-started/hello-world-example/src/: main.rs
examples/grpc/grpc-example/: Cargo.toml  build.rs
examples/integrations/mail-example/: Cargo.toml
examples/integrations/mail-example/src/: main.rs
examples/integrations/opentelemetry-example/: Cargo.toml
examples/integrations/opentelemetry-example/src/: main.rs
examples/integrations/plugin-example/: Cargo.toml  build.rs
examples/integrations/plugin-example/src/: main.rs
examples/job/apalis-redis-example/: Cargo.toml
examples/job/apalis-redis-example/src/: main.rs
examples/job/job-example/: Cargo.toml
examples/job/job-example/src/: main.rs
examples/pubsub-example/: Cargo.toml  README.md
examples/pubsub-example/config/: app.toml
examples/pubsub-example/src/: main.rs
examples/pubsub-example/src/consumers/: user.rs
examples/pubsub-example/src/controllers/: auth.rs
examples/sa-token-example/src/: config.rs  main.rs  sea_orm_storage.rs
examples/stream/stream-file-example/: Cargo.toml
examples/stream/stream-kafka-example/: Cargo.toml
examples/stream/stream-redis-example/: Cargo.toml
examples/web/openapi-example/: Cargo.toml
examples/web/openapi-example/src/: main.rs
examples/web/socket-io-example/: Cargo.toml
examples/web/socket-io-example/src/: main.rs
examples/web/web-example/: Cargo.toml
examples/web/web-example/src/: jwt.rs  main.rs
examples/web/web-middleware-example/: Cargo.toml  README.md
examples/web/web-middleware-example/config/: app.toml
examples/web/web-middleware-example/src/: main.rs
spring/: COMPONENT_MACRO.md  COMPONENT_MACRO.zh.md
spring-macros/: Cargo.toml
spring-macros/src/: lib.rs
summer/: COMPONENT_MACRO.md  COMPONENT_MACRO.zh.md  Cargo.toml  DI.md  DI.zh.md  Plugin.md  Plugin.zh.md
summer-apalis/: Cargo.toml  README.md  README.zh.md
summer-grpc/: Cargo.toml  README.md  README.zh.md
summer-job/: Cargo.toml
summer-macros/: CHANGELOG.md  Cargo.toml
summer-macros/src/: auto.rs  lib.rs  pubsub.rs  sa_token.rs
summer-mail/: Cargo.toml  README.md  README.zh.md
summer-opentelemetry/: Cargo.toml  README.md  README.zh.md
summer-postgres/: Cargo.toml  README.md  README.zh.md
summer-pubsub/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-pubsub/src/: config.rs  consumer.rs  extractor.rs  handler.rs  lib.rs  message.rs  producer.rs
summer-redis/: Cargo.toml  README.md  README.zh.md
summer-sa-token/: CHANGELOG.md  Cargo.toml
summer-sa-token/src/: custom_storage.rs  lib.rs  prelude.rs
summer-sa-token/tests/: integration_test.rs
summer-sea-orm/: Cargo.toml  README.md  README.zh.md
summer-sqlx/: Cargo.toml  README.md  README.zh.md
summer-stream/: Cargo.toml  README.md  README.zh.md
summer-web/: Cargo.toml  README.md  README.zh.md
