[workspace]
resolver = "2"
members = [
    "summer",
    "summer-macros",
    "summer-web",
    "summer-grpc",
    "summer-job",
    "summer-redis",
    "summer-sqlx",
    "summer-postgres",
    "summer-sea-orm",
    "summer-stream",
    "summer-pubsub",
    "summer-mail",
    "summer-opentelemetry",
    "summer-opendal",
    "summer-apalis",
    "summer-sa-token",
    "examples/*",
]
default-members = ["summer", "summer-*"]
exclude = ["examples/**"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["holmofy"]
repository = "https://github.com/summer-rs/summer-rs"

[workspace.dependencies]
aide = "0.16.0-alpha.2"
anyhow = "1.0"
apalis = "1.0.0-rc.6"
apalis-redis = "1.0.0-rc.6"
apalis-amqp = "1.0.0-rc.6"
apalis-postgres = { version = "1.0.0-rc.6", default-features = false }
apalis-mysql = { version = "1.0.0-rc.6", default-features = false }
apalis-sqlite = { version = "1.0.0-rc.6", default-features = false }
apalis-workflow = "0.1.0-rc.6"
apalis-cron = "1.0.0-rc.6"
apalis-board = "1.0.0-rc.6"
async-trait = "0.1"
axum = "0.8"
byte-unit = "5.1"
chrono = "0.4"
dashmap = "6.1"
dotenvy = "0.15.7"
futures-util = "0.3"
google-cloud-auth = "1.9"
google-cloud-pubsub = "0.33"
bytes = "1"
http = "1"
http-body = "1"
indexmap = "2.13"
inventory = "0.3.22"
lettre = "0.11"
log = "0.4"
nu-ansi-term = "0.50"
opendal = "0.55"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-appender-tracing = "0.31"
opentelemetry-http = "0.31"
opentelemetry-jaeger-propagator = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry-prometheus = "0.31"
opentelemetry-resource-detectors = "0.10"
opentelemetry-semantic-conventions = "0.31"
opentelemetry-zipkin = "0.31"
pin-project = "1"
proc-macro2 = "1.0"
prometheus = "0.14"
prometheus-client = "0.24"
prost = "0.14"
quote = "1.0"
redis = "1.0"
rmpv = "1.3"
schemars = "1.1"
sea-orm = "2.0.0-rc.37"
sea-streamer = "0.5"
serde = "1.0"
serde_json = "1.0"
serde-toml-merge = "0.3.10"
socketioxide = "0.18.2"
sqlx = "0.8"
syn = "2.0"
sa-token-plugin-axum = "0.1.12"
sa-token-core = "0.1.12"
sa-token-adapter = "0.1.12"
sa-token-storage-memory = "0.1.12"
thiserror = "2.0"
tokio = "1.47"
tokio-cron-scheduler = "0.15"
tokio-postgres = "0.7"
toml = "0.9"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
tower-http = "0.6"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = "0.3"
uuid = "1"
