[package]
name = "summer-mail"
description = "Integrate lettre into summer-rs to send emails"
version = "0.6.0"
categories = ["email"]
keywords = ["email", "smtp", "summer"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lettre = { workspace = true, features = ["tokio1-native-tls", "serde"] }
summer = { path = "../summer", version = "0.6.0" }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
schemars = { workspace = true }

[dev-dependencies]
summer-web = { path = "../summer-web" }
