[package]
name = "summer-sea-orm"
description = "Integration of summer-rs framework and sea-orm"
version = "0.6.0-rc.1"
categories = ["database"]
keywords = ["orm", "sql-database", "summer"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["sea-orm/runtime-tokio-native-tls"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
rustls = ["sea-orm/runtime-tokio-rustls"]
with-web = ["summer-web"]
with-web-openapi = ["summer-web/openapi"]

[dependencies]
summer-web = { path = "../summer-web", version = "0.6.0", optional = true }
summer = { path = "../summer", version = "0.6.0" }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
schemars = { workspace = true }
sea-orm = { workspace = true, optional = true }
