[package]
name = "summer"
description = "Rust microservice framework like spring boot in java"
version = "0.6.0"
categories = ["config"]
keywords = ["framework", "summer", "spring"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
summer-macros = { path = "../summer-macros", version = "0.6.0" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
nu-ansi-term = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "json",
    "env-filter",
    "tracing-log",
    "chrono",
] }
inventory = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true, features = ["parse"] }
serde-toml-merge = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "3.12"
summer-sqlx = { path = "../summer-sqlx" }
summer-web = { path = "../summer-web" }
summer-job = { path = "../summer-job" }
summer-stream = { path = "../summer-stream" }
