[package]
name = "postgres-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../../summer" }
summer-web = { path = "../../../summer-web" }
summer-postgres = { path = "../../../summer-postgres"}
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }