[package]
name = "redis-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../../summer" }
summer-web = { path = "../../../summer-web" }
summer-redis = { path = "../../../summer-redis" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }