[package]
name = "component-macro-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../../summer" }
summer-web = { path = "../../../summer-web" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
