[package]
name = "dependency-inject-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../../summer" }
summer-web = { path = "../../../summer-web" }
summer-sqlx = { path = "../../../summer-sqlx", features = ["postgres"] }
tokio = { workspace = true, features = ["full", "tracing"] }
schemars = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { version = "1", features = ["deref"] }
