[package]
name = "mail-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../../summer" }
summer-web = { path = "../../../summer-web" }
summer-mail = { path = "../../../summer-mail" }
tokio = { workspace = true }
anyhow = { workspace = true }
