[package]
name = "opentelemetry-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../../summer" }
summer-web = { path = "../../../summer-web" }
summer-sqlx = { path = "../../../summer-sqlx", features = ["postgres"] }
summer-opentelemetry = { path = "../../../summer-opentelemetry", features = [
    "grpc",
] }
tokio = { workspace = true }
anyhow = { workspace = true }
