[package]
name = "apalis-redis-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../../summer" }
summer-web = { path = "../../../summer-web" }
summer-redis = { path = "../../../summer-redis" }
summer-apalis = { path = "../../../summer-apalis", features = ["redis", "board", "board-web"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
