[package]
name = "job-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../../summer" }
summer-job = { path = "../../../summer-job", features = ["postgres_storage"] }
summer-web = { path = "../../../summer-web" }
summer-sqlx = { path = "../../../summer-sqlx", features = [
    "postgres",
    "with-chrono",
] }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
