[package]
name = "stream-redis-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../../summer" }
summer-web = { path = "../../../summer-web" }
summer-stream = { path = "../../../summer-stream", features = ["redis", "json"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
